Fix: Heder layout 2 not correctly aligned in AMP

--- a/assets/css/unminified/style-rtl.css
+++ b/assets/css/unminified/style-rtl.css
@@ -2938,6 +2938,10 @@ body {
   flex: 0 0 100%;
 }
 
+.site-logo-img .custom-logo-link .custom-logo.amp-wp-enforced-sizes {
+  display: inline-block;
+}
+
 /**
  *  3 - Header Layout 3
 */
