--- a/sass/site/header/_header-layouts.scss
+++ b/sass/site/header/_header-layouts.scss
@@ -86,6 +86,17 @@
 	}
 }
 
+.site-logo-img {
+	.custom-logo-link {
+		.custom-logo {
+			&.amp-wp-enforced-sizes {
+				display: inline-block;
+			}
+		}
+	}
+}
+
+
 /**
  *  3 - Header Layout 3
 */
